--- a/assets/sass/components/_works_box.scss
+++ b/assets/sass/components/_works_box.scss
@@ -80,7 +80,6 @@
     }
 
     .detail {
-        width: 95%;
         height: 90%;
         display: block;
         padding: 5px;
